<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/string_menu_home" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu"
            android:title="@string/string_menu_menu" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/string_menu_cart" />
        <item
            android:id="@+id/nav_receipt"
            android:icon="@drawable/ic_receipt"
            android:title="@string/string_menu_receipt" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_blog"
            android:title="@string/string_menu_blog" />

    </group>

    <item android:title="@string/string_menu_information">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/string_menu_profile"/>
            <item
                android:id="@+id/nav_location"
                android:icon="@drawable/ic_location"
                android:title="@string/string_menu_location"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/string_menu_setting"/>
            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/ic_signout"
                android:title="@string/string_menu_signOut"/>
        </menu>
    </item>
</menu>
