<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/string_confirm_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:hint="@string/string_profile_user_name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_user_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:hint="@string/string_profile_phone"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_phone"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:hint="@string/string_confirm_delivery_address"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_user_location"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/edt_address"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorButton"
        android:text="@string/string_confirm_get_location"
        android:textAllCaps="false"
        android:textColor="@color/color_font"
        android:textSize="20dp" />

    <RelativeLayout
        android:id="@+id/cart_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/color_background">

        <Button
            android:id="@+id/btn_confirm_detail"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorButton"
            android:text="@string/string_confirm_details"
            android:textColor="@color/color_font"

            android:textSize="20dp" />

    </RelativeLayout>

</RelativeLayout>