<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".uiFragment.ProductDetailFragment">

    <ImageView
        android:id="@+id/image_post_blog"
        android:layout_width="match_parent"
        android:layout_height="240dp"/>

    <Button
        android:id="@+id/btn_post_blog_camera"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/image_post_blog"
        android:background="@color/colorButton"
        android:text="@string/string_post_blog_camera"
        android:textAllCaps="false"
        android:textColor="@color/color_font" />


    <Button
        android:id="@+id/btn_post_blog_add_image"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/image_post_blog"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:background="@color/colorButton"
        android:text="@string/string_post_blog_image"
        android:textAllCaps="false"
        android:textColor="@color/color_font" />

    <EditText
        android:id="@+id/txt_post_blog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_post_blog_camera"
        android:layout_marginTop="10dp"
        android:hint="@string/string_post_blog_title"
        android:textColor="@color/color_font"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_product_detail_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_post_blog_title"
        android:layout_marginTop="10dp"
        android:hint="@string/string_post_blog_des"
        android:textColor="@color/color_font"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_post_blog_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:textAllCaps="false"
        android:background="@color/colorButton"
        android:text="@string/string_post_blog_submit"
        android:textColor="@color/color_font" />


</RelativeLayout>