<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/orders_header"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:background="@color/color_frontend">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_profile_title"
                android:textAlignment="center"
                android:textColor="@color/color_font"
                android:textSize="20dp" />
        </RelativeLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_default_user" />


        <Button
            android:id="@+id/btn_new_photo"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorButton"
            android:text="@string/string_profile_new_photo"
            android:textColor="@color/color_font"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_update_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:hint="@string/string_profile_user_name"
            android:padding="10dp"
            android:textColor="@color/color_font"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_update_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:hint="@string/string_profile_email"
            android:padding="10dp"
            android:textColor="@color/color_font"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_update_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:hint="@string/string_profile_phone"
            android:padding="10dp"
            android:textColor="@color/color_font"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/edt_update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:hint="@string/string_profile_new_password"
            android:padding="10dp"
            android:textColor="@color/color_font"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_now_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:hint="@string/string_profile_now_password"
            android:padding="10dp"
            android:textColor="@color/color_font"
            android:textSize="20sp" />


        <RelativeLayout
            android:id="@+id/orders_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/color_background">

            <Button
                android:id="@+id/btn_clean"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorButton"
                android:text="@string/string_profile_clean"
                android:textColor="@color/color_font"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorButton"
                android:text="@string/string_profile_update"
                android:textColor="@color/color_font"
                android:textSize="20dp" />


        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>