<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/color_frontend"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/nav_user_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_default_user" />


        <TextView
            android:id="@+id/nav_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:fontFamily="sans-serif"
            android:text="@string/nav_header_userName"
            android:textColor="@color/color_font" />

        <TextView
            android:id="@+id/nav_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:fontFamily="sans-serif"
            android:text="@string/nav_header_userEmail"
            android:textColor="@color/color_font" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGoSignIn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorButton"
        android:textColor="@color/color_font"
        android:text="@string/string_signIn" />


</RelativeLayout>