<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <RelativeLayout
        android:id="@+id/cart_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/color_frontend">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/string_txt_cart"
            android:textAlignment="center"
            android:textColor="@color/color_font"
            android:textSize="20dp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cart_bottom"
        android:layout_below="@+id/cart_header">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/txt_alert_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cart_header"
        android:gravity="center"
        android:text="@string/string_cart_alert_message"/>

    <RelativeLayout
        android:id="@+id/cart_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/color_frontend">

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginVertical="10dp"
            android:text="@string/string_product_total_price"
            android:textAlignment="center"
            android:textColor="@color/color_font"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txt_total_price"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="115dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/color_font"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginVertical="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorButton"
            android:text="@string/string_product_next"
            android:textColor="@color/color_font"
            android:textSize="20dp" />

    </RelativeLayout>

</RelativeLayout>