<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_frontend"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_item_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/string_product_name"
            android:textColor="@color/color_font"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/txt_quantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/string_product_quantity"
            android:textColor="@color/color_font"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/txt_item_quantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:gravity="right"
            android:textAlignment="viewEnd"
            android:textColor="@color/color_font"
            android:textSize="14dp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_item_quantity"
            android:layout_alignParentEnd="true"
            android:text="@string/string_product_price"
            android:textColor="@color/color_font"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/txt_item_price"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_item_quantity"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:gravity="right"
            android:textAlignment="viewEnd"
            android:textColor="@color/color_font"
            android:textSize="14dp"
            tools:ignore="RtlCompat" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>